--- a/kbs/docker/Dockerfile.coco-as-grpc
+++ b/kbs/docker/Dockerfile.coco-as-grpc
@@ -1,12 +1,14 @@
 FROM rust:latest as builder
+ARG ARCH=x86_64
 
 WORKDIR /usr/src/kbs
 COPY . .
 
 RUN apt-get update && apt install -y protobuf-compiler wget git
 
-RUN wget https://go.dev/dl/go1.20.1.linux-amd64.tar.gz
-RUN tar -C /usr/local -xzf go1.20.1.linux-amd64.tar.gz
+RUN [ "${ARCH}" = "x86_64" ] && GOARCH="amd64" || GOARCH="${ARCH}" && \
+wget https://go.dev/dl/go1.20.1.linux-${GOARCH}.tar.gz && \
+tar -C /usr/local -xzf go1.20.1.linux-${GOARCH}.tar.gz
 ENV PATH="/usr/local/go/bin:${PATH}"
 
 # Build and Install KBS
