--- a/kbs/docker/Dockerfile.coco-as-grpc
+++ b/kbs/docker/Dockerfile.coco-as-grpc
@@ -1,5 +1,6 @@
 FROM rust:latest as builder
 ARG ARCH=x86_64
+ARG HTTPS_CRYPTO=rustls
 
 WORKDIR /usr/src/kbs
 COPY . .
@@ -12,8 +13,7 @@ tar -C /usr/local -xzf go1.20.1.linux-${GOARCH}.tar.gz
 ENV PATH="/usr/local/go/bin:${PATH}"
 
 # Build and Install KBS
-RUN cargo install --path kbs/src/kbs --no-default-features --features coco-as-grpc,resource,opa,rustls
-
+RUN cargo install --path kbs/src/kbs --no-default-features --features coco-as-grpc,resource,opa,${HTTPS_CRYPTO}
 
 FROM ubuntu:22.04
 
