--- a/.github/workflows/as-build-and-push.yaml
+++ b/.github/workflows/as-build-and-push.yaml
@@ -3,14 +3,22 @@ name: Build and Push CoCoAS / RVPS Image
 on:
   push:
     branches:
-      - main
+      - enable-s390x-kbs-images
 
 jobs:
   build_and_push:
-    runs-on: ubuntu-latest
+    permissions:
+      packages: write
     strategy:
       fail-fast: false
       matrix:
+        instance:
+          - ubuntu-latest
+          - s390x-test
+        tag:
+          - coco-as-grpc
+          - coco-as-restful
+          - rvps
         include:
           - docker_file: attestation-service/Dockerfile.as-grpc
             tag: coco-as-grpc
@@ -21,8 +29,15 @@ jobs:
           - docker_file: attestation-service/rvps/Dockerfile
             tag: rvps
             name: RVPS
+    runs-on: ${{ matrix.instance }}
 
     steps:
+    - name: Take a pre-action for self-hosted runner
+      run: |
+        if [ -f ${HOME}/script/pre_action.sh ]; then
+          ${HOME}/script/pre_action.sh cc-trustee
+        fi
+
     - name: Checkout code
       uses: actions/checkout@v4
 
@@ -39,4 +54,56 @@ jobs:
     - name: Build ${{ matrix.name }} Container Image
       run: |
         commit_sha=${{ github.sha }}
-        DOCKER_BUILDKIT=1 docker build -t ghcr.io/confidential-containers/staged-images/${{ matrix.tag }}:${commit_sha} -t ghcr.io/confidential-containers/staged-images/${{ matrix.tag }}:latest . -f ${{ matrix.docker_file }} --push
+        arch=$(uname -m)
+        DOCKER_BUILDKIT=1 docker build -f ${{ matrix.docker_file }} --push --build-arg ARCH=${arch} \
+          -t ghcr.io/bbolroc/staged-images/${{ matrix.tag }}:${commit_sha}-${arch} \
+          -t ghcr.io/bbolroc/staged-images/${{ matrix.tag }}:latest-${arch} .
+
+    - name: Take a post-action for self-hosted runner
+      if: always()
+      run: |
+        if [ -f ${HOME}/script/post_action.sh ]; then
+          ${HOME}/script/post_action.sh cc-trustee
+        fi
+
+  publish_multi_arch_image:
+    needs: build_and_push
+    permissions:
+      packages: write
+    strategy:
+      fail-fast: false
+      matrix:
+        tag:
+          - coco-as-grpc
+          - coco-as-restful
+          - rvps
+        include:
+          - tag: coco-as-grpc
+            name: gRPC CoCo-AS
+          - tag: coco-as-restful
+            name: RESTful CoCo-AS
+          - tag: rvps
+            name: RVPS
+    runs-on: ubuntu-latest
+    steps:
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    - name: Login to GHCR Container Registry
+      uses: docker/login-action@v3
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Publish Multi-arch Image for ${{ matrix.name }}
+      run: |
+        commit_sha=${{ github.sha }}
+        docker manifest create ghcr.io/bbolroc/staged-images/${{ matrix.tag }}:${commit_sha} \
+          ghcr.io/bbolroc/staged-images/${{ matrix.tag }}:${commit_sha}-s390x \
+          ghcr.io/bbolroc/staged-images/${{ matrix.tag }}:${commit_sha}-x86_64
+        docker manifest push ghcr.io/bbolroc/staged-images/${{ matrix.tag }}:${commit_sha}
+        docker manifest create ghcr.io/bbolroc/staged-images/${{ matrix.tag }}:latest \
+          ghcr.io/bbolroc/staged-images/${{ matrix.tag }}:latest-s390x \
+          ghcr.io/bbolroc/staged-images/${{ matrix.tag }}:latest-x86_64
+        docker manifest push ghcr.io/bbolroc/staged-images/${{ matrix.tag }}:latest
