--- a/.github/workflows/as-build-and-push.yaml
+++ b/.github/workflows/as-build-and-push.yaml
@@ -3,7 +3,7 @@ name: Build and Push CoCoAS / RVPS Image
 on:
   push:
     branches:
-      - main
+      - enable-s390x-kbs-images
 
 jobs:
   build_and_push:
