--- a/.github/workflows/kbs-client-build-and-push.yaml
+++ b/.github/workflows/kbs-client-build-and-push.yaml
@@ -3,7 +3,7 @@ name: Build and push kbs-client
 on:
   push:
     branches:
-      - enable-s390x-kbs-images
+      - main
 
 jobs:
   build_and_push:
