--- a/.github/workflows/kbs-client-build-and-push.yaml
+++ b/.github/workflows/kbs-client-build-and-push.yaml
@@ -7,14 +7,30 @@ on:
 
 jobs:
   build_and_push:
+    strategy:
+      matrix:
+        instance:
+          - ubuntu-22.04
+          - s390x
+        include:
+          - instance: ubuntu-22.04
+            arch: x86_64
+          - instance: s390x
+            arch: s390x
     env:
       RUSTC_VERSION: 1.76.0
-    runs-on: ubuntu-22.04
+    runs-on: ${{ matrix.instance }}
     permissions:
       contents: read
       packages: write
 
     steps:
+    - name: Take a pre-action for self-hosted runner
+      run: |
+        if [ -f "${HOME}/script/pre_action.sh" ]; then
+          "${HOME}/script/pre_action.sh" cc-trustee
+        fi
+
     - name: Check out code
       uses: actions/checkout@v4
     - name: Install rust toolchain
@@ -29,14 +45,22 @@ jobs:
         registry: ghcr.io
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
-    - name: Build a statically linked kbs-client for x86_64 linux
+    - name: Build a statically linked kbs-client for ${{ matrix.arch }} linux
       working-directory: kbs
       run: |
-        make cli-static-x86_64-linux
+        make cli-static-linux
     - name: Push to ghcr.io
-      working-directory: target/x86_64-unknown-linux-gnu/release
+      working-directory: target/${{ matrix.arch }}-unknown-linux-gnu/release
       run: |
         commit_sha=${{ github.sha }}
         oras push \
-          ghcr.io/confidential-containers/staged-images/kbs-client:sample_only-x86_64-linux-gnu-${commit_sha},latest \
+          ghcr.io/confidential-containers/staged-images/kbs-client:sample_only-${{ matrix.arch }}-linux-gnu-${commit_sha},latest-${{ matrix.arch }} \
           kbs-client
+        [ "$(uname -m)" = "x86_64" ] && oras push ghcr.io/confidential-containers/staged-images/kbs-client:latest kbs-client || true
+
+    - name: Take a post-action for self-hosted runner
+      if: always()
+      run: |
+        if [ -f "${HOME}/script/post_action.sh" ]; then
+          "${HOME}/script/post_action.sh" cc-trustee
+        fi
