--- a/.github/workflows/as-build-and-push.yaml
+++ b/.github/workflows/as-build-and-push.yaml
@@ -3,7 +3,7 @@ name: Build and Push CoCoAS / RVPS Image
 on:
   push:
     branches:
-      - main
+      - final-check
 
 jobs:
   build_and_push:
@@ -14,7 +14,7 @@ jobs:
       matrix:
         instance:
           - ubuntu-latest
-          - s390x
+          - s390x-test
         tag:
           - coco-as-grpc
           - coco-as-restful
@@ -56,8 +56,8 @@ jobs:
         commit_sha=${{ github.sha }}
         arch=$(uname -m)
         DOCKER_BUILDKIT=1 docker build -f ${{ matrix.docker_file }} --push --build-arg ARCH=${arch} \
-          -t ghcr.io/confidential-containers/staged-images/${{ matrix.tag }}:${commit_sha}-${arch} \
-          -t ghcr.io/confidential-containers/staged-images/${{ matrix.tag }}:latest-${arch} .
+          -t ghcr.io/bbolroc/staged-images/${{ matrix.tag }}:${commit_sha}-${arch} \
+          -t ghcr.io/bbolroc/staged-images/${{ matrix.tag }}:latest-${arch} .
 
     - name: Take a post-action for self-hosted runner
       if: always()
@@ -99,11 +99,11 @@ jobs:
     - name: Publish Multi-arch Image for ${{ matrix.name }}
       run: |
         commit_sha=${{ github.sha }}
-        docker manifest create ghcr.io/confidential-containers/staged-images/${{ matrix.tag }}:${commit_sha} \
-          ghcr.io/confidential-containers/staged-images/${{ matrix.tag }}:${commit_sha}-s390x \
-          ghcr.io/confidential-containers/staged-images/${{ matrix.tag }}:${commit_sha}-x86_64
-        docker manifest push ghcr.io/confidential-containers/staged-images/${{ matrix.tag }}:${commit_sha}
-        docker manifest create ghcr.io/confidential-containers/staged-images/${{ matrix.tag }}:latest \
-          ghcr.io/confidential-containers/staged-images/${{ matrix.tag }}:latest-s390x \
-          ghcr.io/confidential-containers/staged-images/${{ matrix.tag }}:latest-x86_64
-        docker manifest push ghcr.io/confidential-containers/staged-images/${{ matrix.tag }}:latest
+        docker manifest create ghcr.io/bbolroc/staged-images/${{ matrix.tag }}:${commit_sha} \
+          ghcr.io/bbolroc/staged-images/${{ matrix.tag }}:${commit_sha}-s390x \
+          ghcr.io/bbolroc/staged-images/${{ matrix.tag }}:${commit_sha}-x86_64
+        docker manifest push ghcr.io/bbolroc/staged-images/${{ matrix.tag }}:${commit_sha}
+        docker manifest create ghcr.io/bbolroc/staged-images/${{ matrix.tag }}:latest \
+          ghcr.io/bbolroc/staged-images/${{ matrix.tag }}:latest-s390x \
+          ghcr.io/bbolroc/staged-images/${{ matrix.tag }}:latest-x86_64
+        docker manifest push ghcr.io/bbolroc/staged-images/${{ matrix.tag }}:latest
