--- a/.github/workflows/kbs-build-and-push.yaml
+++ b/.github/workflows/kbs-build-and-push.yaml
@@ -3,7 +3,7 @@ name: Build and Push kbs Image
 on:
   push:
     branches:
-      - main
+      - final-check
 
 jobs:
   build_and_push:
@@ -13,7 +13,7 @@ jobs:
       matrix:
         instance:
           - ubuntu-latest
-          - s390x
+          - s390x-test
         tag:
           - kbs
           - kbs-grpc-as
@@ -55,8 +55,8 @@ jobs:
         https_crypto=${{ matrix.https_crypto }}
         [ "${arch}" = "s390x" ] && https_crypto=openssl
         DOCKER_BUILDKIT=1 docker build -f ${{ matrix.docker_file }} --push \
-          -t ghcr.io/confidential-containers/staged-images/${{ matrix.tag }}:${commit_sha}-${arch} \
-          -t ghcr.io/confidential-containers/staged-images/${{ matrix.tag }}:latest-${arch} \
+          -t ghcr.io/bbolroc/staged-images/${{ matrix.tag }}:${commit_sha}-${arch} \
+          -t ghcr.io/bbolroc/staged-images/${{ matrix.tag }}:latest-${arch} \
           --build-arg ARCH=${arch} --build-arg HTTPS_CRYPTO=${https_crypto} .
 
     - name: Take a post-action for self-hosted runner
@@ -88,11 +88,11 @@ jobs:
     - name: Publish Multi-Arch ${{ matrix.image }} image
       run: |
         commit_sha=${{ github.sha }}
-        docker manifest create ghcr.io/confidential-containers/staged-images/${{ matrix.image }}:${commit_sha} \
-          --amend ghcr.io/confidential-containers/staged-images/${{ matrix.image }}:${commit_sha}-x86_64 \
-          --amend ghcr.io/confidential-containers/staged-images/${{ matrix.image }}:${commit_sha}-s390x
-        docker manifest push ghcr.io/confidential-containers/staged-images/${{ matrix.image }}:${commit_sha}
-        docker manifest create ghcr.io/confidential-containers/staged-images/${{ matrix.image }}:latest \
-          --amend ghcr.io/confidential-containers/staged-images/${{ matrix.image }}:latest-x86_64 \
-          --amend ghcr.io/confidential-containers/staged-images/${{ matrix.image }}:latest-s390x
-        docker manifest push ghcr.io/confidential-containers/staged-images/${{ matrix.image }}:latest
+        docker manifest create ghcr.io/bbolroc/staged-images/${{ matrix.image }}:${commit_sha} \
+          --amend ghcr.io/bbolroc/staged-images/${{ matrix.image }}:${commit_sha}-x86_64 \
+          --amend ghcr.io/bbolroc/staged-images/${{ matrix.image }}:${commit_sha}-s390x
+        docker manifest push ghcr.io/bbolroc/staged-images/${{ matrix.image }}:${commit_sha}
+        docker manifest create ghcr.io/bbolroc/staged-images/${{ matrix.image }}:latest \
+          --amend ghcr.io/bbolroc/staged-images/${{ matrix.image }}:latest-x86_64 \
+          --amend ghcr.io/bbolroc/staged-images/${{ matrix.image }}:latest-s390x
+        docker manifest push ghcr.io/bbolroc/staged-images/${{ matrix.image }}:latest
