--- a/.github/workflows/kbs-client-build-and-push.yaml
+++ b/.github/workflows/kbs-client-build-and-push.yaml
@@ -3,7 +3,7 @@ name: Build and push kbs-client
 on:
   push:
     branches:
-      - main
+      - final-check
 
 jobs:
   build_and_push:
@@ -11,11 +11,11 @@ jobs:
       matrix:
         instance:
           - ubuntu-22.04
-          - s390x
+          - s390x-test
         include:
           - instance: ubuntu-22.04
             arch: x86_64
-          - instance: s390x
+          - instance: s390x-test
             arch: s390x
     env:
       RUSTC_VERSION: 1.76.0
@@ -54,9 +54,9 @@ jobs:
       run: |
         commit_sha=${{ github.sha }}
         oras push \
-          ghcr.io/confidential-containers/staged-images/kbs-client:sample_only-${{ matrix.arch }}-linux-gnu-${commit_sha},latest-${{ matrix.arch }} \
+          ghcr.io/bbolroc/staged-images/kbs-client:sample_only-${{ matrix.arch }}-linux-gnu-${commit_sha},latest-${{ matrix.arch }} \
           kbs-client
-        [ "$(uname -m)" = "x86_64" ] && oras push ghcr.io/confidential-containers/staged-images/kbs-client:latest kbs-client || true
+        [ "$(uname -m)" = "x86_64" ] && oras push ghcr.io/bbolroc/staged-images/kbs-client:latest kbs-client || true
 
     - name: Take a post-action for self-hosted runner
       if: always()
