--- a/.github/workflows/kbs-build-and-push.yaml
+++ b/.github/workflows/kbs-build-and-push.yaml
@@ -10,6 +10,7 @@ jobs:
     permissions:
       packages: write
     strategy:
+      fail-fast: false
       matrix:
         instance:
           - ubuntu-latest
@@ -31,6 +32,8 @@ jobs:
     steps:
     - name: Take a pre-action for self-hosted runner
       run: |
+        # NOTE: Use file checking instead triggering a step based on a runner type
+        # to avoid updating the step for each new self-hosted runner.
         if [ -f "${HOME}/script/pre_action.sh" ]; then
           "${HOME}/script/pre_action.sh" cc-trustee
         fi
@@ -62,6 +65,7 @@ jobs:
     - name: Take a post-action for self-hosted runner
       if: always()
       run: |
+        # Please check out the note in the pre-action step for the reason of using file checking
         if [ -f "${HOME}/script/post_action.sh" ]; then
           "${HOME}/script/post_action.sh" cc-trustee
         fi
@@ -69,6 +73,7 @@ jobs:
   publish_multi_arch_image:
     needs: build_and_push
     strategy:
+      fail-fast: false
       matrix:
         image:
           - kbs
