--- a/.github/workflows/kbs-client-build-and-push.yaml
+++ b/.github/workflows/kbs-client-build-and-push.yaml
@@ -8,18 +8,14 @@ on:
 jobs:
   build_and_push:
     strategy:
+      fail-fast: false
       matrix:
-        instance:
-          - ubuntu-22.04
-          - s390x-test
-        include:
-          - instance: ubuntu-22.04
-            arch: x86_64
-          - instance: s390x-test
-            arch: s390x
+        arch:
+          - x86_64
+          - s390x
     env:
       RUSTC_VERSION: 1.76.0
-    runs-on: ${{ matrix.instance }}
+    runs-on: ${{ matrix.arch == 'x86_64' && 'ubuntu-22.04' || 's390x' }}
     permissions:
       contents: read
       packages: write
@@ -27,6 +23,8 @@ jobs:
     steps:
     - name: Take a pre-action for self-hosted runner
       run: |
+        # NOTE: Use file checking instead triggering a step based on a runner type
+        # to avoid updating the step for each new self-hosted runner.
         if [ -f "${HOME}/script/pre_action.sh" ]; then
           "${HOME}/script/pre_action.sh" cc-trustee
         fi
@@ -61,6 +59,7 @@ jobs:
     - name: Take a post-action for self-hosted runner
       if: always()
       run: |
+        # Please check out the note in the pre-action step for the reason of using file checking
         if [ -f "${HOME}/script/post_action.sh" ]; then
           "${HOME}/script/post_action.sh" cc-trustee
         fi
