--- a/attestation-service/Dockerfile.as-restful
+++ b/attestation-service/Dockerfile.as-restful
@@ -9,7 +9,7 @@ WORKDIR /usr/src/attestation-service
 COPY . .
 
 # Install golang
-RUN [ "${ARCH}" = "x86_64" ] && GOARCH="amd64" || GOARCH="${ARCH}" && \
+RUN if [ "${ARCH}" = "x86_64" ]; then GOARCH="amd64"; else GOARCH="${ARCH}"; fi && \
     wget https://go.dev/dl/go1.20.1.linux-${GOARCH}.tar.gz && \
     tar -C /usr/local -xzf go1.20.1.linux-${GOARCH}.tar.gz
 
