--- a/attestation-service/rvps/Dockerfile
+++ b/attestation-service/rvps/Dockerfile
@@ -2,7 +2,10 @@
 # Licensed under the Apache License, Version 2.0, see LICENSE for details.
 # SPDX-License-Identifier: Apache-2.0
 
-FROM rust:latest as builder
+FROM --platform=${BUILDPLATFORM} rust:latest as builder
+# predefined variables supported by BuildKit
+ARG TARGETARCH
+ARG BUILDARCH
 
 WORKDIR /usr/src/rvps
 
@@ -10,9 +13,20 @@ COPY . .
 
 RUN apt-get update && apt-get install protobuf-compiler -y
 
-RUN cargo install --bin rvps --path attestation-service/rvps
+# to support cross-compiling
+RUN if [  "${BUILDARCH}" != "${TARGETARCH}" ]; then apt-get install -y --no-install-recommends \
+    gcc-"${TARGETARCH}"-linux-gnu \
+    libc6-dev-"${TARGETARCH}"-cross && \
+    rustup target add "${TARGETARCH}-unknown-linux-gnu"; fi
 
-FROM debian
+RUN if [ "${BUILDARCH}" != "${TARGETARCH}" ]; then \
+        RUSTFLAGS=" -C linker=${TARGETARCH}-linux-gnu-gcc" \
+	cargo install --bin rvps --path attestation-service/rvps --target "${TARGETARCH}-unknown-linux-gnu"; \
+    else \
+	cargo install --bin rvps --path attestation-service/rvps; \
+    fi
+
+FROM --platform=${TARGETPLATFORM} debian
 
 LABEL org.opencontainers.image.source="https://github.com/confidential-containers/trustee/attestation-service"
 
