--- a/kbs/docker/Dockerfile.coco-as-grpc
+++ b/kbs/docker/Dockerfile.coco-as-grpc
@@ -1,21 +1,39 @@
-FROM rust:latest as builder
-ARG ARCH=x86_64
+FROM --platform=${BUILDPLATFORM} rust:slim as builder
 ARG HTTPS_CRYPTO=rustls
+# Predefined variables supported by BuildKit
+ARG TARGETARCH
+ARG BUILDARCH
 
 WORKDIR /usr/src/kbs
 COPY . .
 
 RUN apt-get update && apt install -y protobuf-compiler wget git
 
-RUN if [ "${ARCH}" = "x86_64" ]; then GOARCH="amd64"; else GOARCH="${ARCH}"; fi && \
-wget https://go.dev/dl/go1.20.1.linux-${GOARCH}.tar.gz && \
-tar -C /usr/local -xzf go1.20.1.linux-${GOARCH}.tar.gz
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends \
+    make \
+    perl
+
+RUN wget https://go.dev/dl/go1.20.1.linux-${BUILDARCH}.tar.gz && \
+    tar -C /usr/local -xzf go1.20.1.linux-${BUILDARCH}.tar.gz
 ENV PATH="/usr/local/go/bin:${PATH}"
 
-# Build and Install KBS
-RUN cargo install --path kbs/src/kbs --no-default-features --features coco-as-grpc,resource,opa,${HTTPS_CRYPTO}
+# To support cross-compiling
+RUN if [  "${BUILDARCH}" != "${TARGETARCH}" ]; then apt-get install -y --no-install-recommends \
+    gcc-"${TARGETARCH}"-linux-gnu \
+    libc6-dev-"${TARGETARCH}"-cross && \
+    rustup target add "${TARGETARCH}-unknown-linux-gnu" && \
+    go env -w CC="${TARGETARCH}"-linux-gnu-gcc; fi
 
-FROM ubuntu:22.04
+# Build and Install KBS
+RUN if [ "${BUILDARCH}" != "${TARGETARCH}" ]; then \
+	RUSTFLAGS=" -C linker=${TARGETARCH}-linux-gnu-gcc" CGO_ENABLED=1 GOARCH="${TARGETARCH}" \
+	cargo install --path kbs/src/kbs --no-default-features --features coco-as-grpc,resource,opa,${HTTPS_CRYPTO} --target "${TARGETARCH}-unknown-linux-gnu"; \
+    else \
+	cargo install --path kbs/src/kbs --no-default-features --features coco-as-grpc,resource,opa,${HTTPS_CRYPTO}; \
+    fi
+
+FROM --platform=${TARGETPLATFORM} ubuntu:22.04
 
 LABEL org.opencontainers.image.source="https://github.com/confidential-containers/trustee/kbs"
 
