--- a/.github/workflows/kbs-build-and-push.yaml
+++ b/.github/workflows/kbs-build-and-push.yaml
@@ -1,9 +1,7 @@
 name: Build and Push kbs Image
 
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
 
 jobs:
   build_and_push:
@@ -14,7 +12,6 @@ jobs:
       matrix:
         instance:
           - ubuntu-latest
-          - s390x
         tag:
           - kbs
           - kbs-grpc-as
@@ -54,13 +51,11 @@ jobs:
     - name: Build Container Image KBS (${{ matrix.name }})
       run: |
         commit_sha=${{ github.sha }}
-        arch=$(uname -m)
-        https_crypto=${{ matrix.https_crypto }}
-        [ "${arch}" = "s390x" ] && https_crypto=openssl
-        DOCKER_BUILDKIT=1 docker build -f ${{ matrix.docker_file }} --push \
+        https_crypto=openssl
+        docker buildx build -f ${{ matrix.docker_file }} --load \
           -t ghcr.io/confidential-containers/staged-images/${{ matrix.tag }}:${commit_sha}-${arch} \
           -t ghcr.io/confidential-containers/staged-images/${{ matrix.tag }}:latest-${arch} \
-          --build-arg ARCH=${arch} --build-arg HTTPS_CRYPTO=${https_crypto} .
+          --platform linux/s390x --build-arg HTTPS_CRYPTO=${https_crypto} .
 
     - name: Take a post-action for self-hosted runner
       if: always()
@@ -70,34 +65,4 @@ jobs:
           "${HOME}/script/post_action.sh" cc-trustee
         fi
 
-  publish_multi_arch_image:
-    needs: build_and_push
-    strategy:
-      fail-fast: false
-      matrix:
-        image:
-          - kbs
-          - kbs-grpc-as
-    permissions:
-      packages: write
-    runs-on: ubuntu-latest
 
-    steps:
-    - name: Login to GHCR Container Registry
-      uses: docker/login-action@v3
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Publish Multi-Arch ${{ matrix.image }} image
-      run: |
-        commit_sha=${{ github.sha }}
-        docker manifest create ghcr.io/confidential-containers/staged-images/${{ matrix.image }}:${commit_sha} \
-          --amend ghcr.io/confidential-containers/staged-images/${{ matrix.image }}:${commit_sha}-x86_64 \
-          --amend ghcr.io/confidential-containers/staged-images/${{ matrix.image }}:${commit_sha}-s390x
-        docker manifest push ghcr.io/confidential-containers/staged-images/${{ matrix.image }}:${commit_sha}
-        docker manifest create ghcr.io/confidential-containers/staged-images/${{ matrix.image }}:latest \
-          --amend ghcr.io/confidential-containers/staged-images/${{ matrix.image }}:latest-x86_64 \
-          --amend ghcr.io/confidential-containers/staged-images/${{ matrix.image }}:latest-s390x
-        docker manifest push ghcr.io/confidential-containers/staged-images/${{ matrix.image }}:latest
