--- a/.github/workflows/as-build-and-push-cross-compilation.yaml
+++ b/.github/workflows/as-build-and-push-cross-compilation.yaml
@@ -30,7 +30,7 @@ jobs:
             tag: rvps
             name: RVPS
     runs-on: ${{ matrix.instance }}
-
+    steps:
     - name: Checkout code
       uses: actions/checkout@v4
 
