--- a/.github/workflows/kbs-build-and-push.yaml
+++ b/.github/workflows/kbs-build-and-push.yaml
@@ -41,9 +41,9 @@ jobs:
     - name: Login to GHCR Container Registry
       uses: docker/login-action@v3
       with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+        registry: quay.io
+        username: ${{ vars.QUAY_USER }}
+        password: ${{ secrets.QUAY_PASSWORD }}
 
     - name: Build Container Image KBS (${{ matrix.name }})
       run: |
@@ -51,6 +51,6 @@ jobs:
         https_crypto=${{ matrix.https_crypto }}
         docker buildx build -f ${{ matrix.docker_file }} --push \
           --platform ${{ matrix.platforms }} \
-          -t ghcr.io/confidential-containers/staged-images/${{ matrix.tag }}:${commit_sha} \
-          -t ghcr.io/confidential-containers/staged-images/${{ matrix.tag }}:latest \
+          -t quay.io/cdlleili/${{ matrix.tag }}:${commit_sha} \
+          -t quay.io/cdlleili/${{ matrix.tag }}:latest \
           --build-arg HTTPS_CRYPTO=${https_crypto} .
